--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
+# Ignore the .env file
 .env
+
+# Ignore Python bytecode files
+*.pyc
+__pycache__/
+
+# Ignore virtual environment directories
+.venv/
+venv/
+
+# Ignore Django migration files
+*/migrations/*
+
+# Ignore database files
+*.sqlite3
+
+# Ignore static files
+staticfiles/
+static/
+
+# Ignore media files
+media/
+
+# Ignore IDE/editor specific files
+.vscode/
+.idea/
+*.swp
+
+# Ignore log files
+*.log
+
+# Ignore coverage reports
+htmlcov/
+.coverage
